--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,10 @@ dependencies:
   firebase_database: ^9.0.8
   shared_preferences: ^2.0.13
   validators: ^3.0.0
+  flutter_local_notifications: ^9.5.2
+  integration_test: 
+       sdk: flutter
+       version: ^0.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
